<resources>
    <string name="app_name">Words With Enemies</string>
	<string name="namespace">com.riotapps.words</string>
	<string name="wordnik_apiKey">48f31f368d20791114b01067e1d05b68ca177aabdbab4150b</string>
    <string name="chartboost_app_id">5259e7c716ba47022e000001</string>
    <string name="chartboost_app_signature">9cd4926b513f36f3e8bc8440316bcb761d562b84</string>
    <string name="admob_pub_id_main_landing">ca-app-pub-7811514377323585/9632292353</string>
    <string name="admob_pub_id_full_rules">ca-app-pub-7811514377323585/3585758755</string>
    <string name="admob_pub_id_game_played_words">ca-app-pub-7811514377323585/9952937157</string>
    <string name="admob_pub_id_game_word_definition">ca-app-pub-7811514377323585/9813336350</string>
 	<string name="admob_pub_id_about">ca-app-pub-7811514377323585/6580668358</string>
    <string name="admob_pub_id_completed_games">ca-app-pub-7811514377323585/9534134756</string>
    <string name="IAB_1">MIIBIjANBgkqhkiG9w0</string>
	<string name="IAB_2">BAQEFAAOCAQ8AMIIBCgKCAQEA</string>
	<string name="IAB_3">xZNJCeHAcdfRmaZ4LPQuv</string>
	<string name="IAB_4">9v4iBmjha/1GslMANYD7JQ</string>
	<string name="IAB_5">NOf+lhQ8fCXYykhvXKC+dKBjA</string>
	<string name="IAB_6">8jF/48FHAmb9kA4TChHPsCAJX7bg3A</string>
	<string name="IAB_7">v6VaROvNPP3X1Zj1BMjgsceXZb</string>
	<string name="IAB_8">1wopeyE/tOjgi0RDfdA3JpppzTj2+xQ</string>
	<string name="IAB_9">Zznc0XKK51Ng7fxbdJaxVBCoXmU6R/rzz+m</string>
	<string name="IAB_10">i3n1M/tRppK0vypWr0P33LSAXfwGJquwlgy3OzO</string>
	<string name="IAB_11">UwAEYodFgRj4RkduVl51uIXJleH9jTYUcTWxpOQ</string>
	<string name="IAB_12">dxvYsmyMVjqEmzexvjImNfef/v96kwfrj+b7r0qn</string>
	<string name="IAB_13">cjFj1uvYsEfg4EROd1rAWVlGQYPlQDtoBwIDAQAB</string>
	<string name="AMAZON_APP_KEY">027ec6fff5ec4b21990c98799dba5a05</string>
	<string name="SKU_GOOGLE_PLAY_HOPPER_PEEK">riotapps_wwe_hopper_peek.a</string>
	<string name="SKU_GOOGLE_PLAY_PREMIUM_UPGRADE">riotapps_wwe_premium_upgrade.a</string>
	<string name="SKU_GOOGLE_PLAY_WORD_DEFINITIONS">riotapps_wwe_word_definitions.a</string>
	<string name="SKU_GOOGLE_PLAY_HIDE_INTERSTITIAL">riotapps_wwe_hide_interstitial.a</string>
	<string name="SKU_GOOGLE_PLAY_WORD_HINTS">riotapps_wwe_word_hints.a</string>
	<string name="main_first_time_alert_title">Welcome!</string>
	<string name="main_first_time_alert_message">To get started, just choose a monster to play.  Check out all of the rules or visit the store by tapping the 3 squares in the top right corner.\n\nEnjoy Words With Enemies!\n\nThe monsters are waiting.</string>
		<string name="word_hint_dialog_title">Hoot\'s Hints</string>
		<string name="word_hint_previews_over">Now that the free previews are over, getting hints from Hoot requires a Hoot\'s Hints Upgrage or a Premium Upgrade.\n\n Just tap the button to go to the store to get 2 hints per game for unlimited games.  It\'s cheap and a great way to get an extra boost of brain power when you need it!\n</string>
		<string name="word_hint_used_this_game">You\'ve used your %s Hoot\'s hints for this game!</string>
		<string name="word_hint_no_previews_left">To keep using Hoot\'s Hints after this game, you\'ll need an Hoot\'s Hints Upgrade or a Premium Upgrade!</string>
  		<string name="word_hint_preview">You have %s more games in which to preview Hoot\'s Hints.\n</string>
		<string name="word_hint_1_preview_left">You have 1 more game in which to preview Hoot\'s hints before needing a Hoot\'s Hints Upgrade or a Premium Upgrade.\n</string>
		<string name="word_hint_description">Just tap a word to place that word on the board.</string>
		<string name="word_hint_sub_description">(Don\'t forget to tap the Play button if you decide to play the word.)</string>
		<string name="word_hint_description_none_found">Sorry, Hoot didn\'t find any word hints.  That doesn\'t mean all hope is lost though!  You may be able to play a word that Hoot didn\'t find.</string>
		 <string name="progress_word_hint_is_thinking">Hoot is thinking&#8230;</string>
	<string name="gameboard_hints_button_text">HOOT\'S\nHINTS</string>
	 <string name="game_surface_first_time_alert_title">Good luck!</string>
	 <string name="game_surface_first_time_alert_message">Drag letters from the tray onto the board to form words in a single axis.\n\nThe first word must be played on at least one star.\n\nLetters can be played on top of previously played letters.</string>
	 <string name="purchase_thanks_hopper_peek">We hope you enjoy your unlimited usage of Hopper Peeks!</string>
	<string name="purchase_thanks_word_definitions">We hope you enjoy your unlimited usage of Word Definitions!</string>
	<string name="purchase_thanks_premium_upgrade">We hope you enjoy your Premium Upgrade!</string>
	<string name="purchase_thanks_hide_interstitial">No more ads between plays!</string>
	<string name="purchase_thanks_word_hints">We hope you enjoy your unlimited usage of Hoot\'s Hints!</string>
	<string name="store_item_premium_upgrade_title">Premium Upgrade</string>
	<string name="store_item_premium_upgrade_description">Enjoy the purest Words With Enemies experience.  No third-party ads at all.  
	    Unlimited word definition lookup for any played word. 
	    Unlimited peeks at the hopper.  Unlimited games with Hoot\'s Hints.</string>
    <string name="store_item_word_definitions_title">Word Definition Lookups</string>
	<string name="store_item_word_definitions_description">Lookup the definition of any played word. Learn as you play! Unlimited usage.</string>
    <string name="store_item_no_ads_title">No Ads Between Moves</string>
	<string name="store_item_no_ads_description">Want to get rid of the ads between moves?  This is the upgrade for you.</string>
    <string name="store_item_hopper_peek_title">Peek at the Hopper</string>
	<string name="store_item_hopper_peek_description">At any time, you will be able to see which letters are left in play in the hopper
	     as well as in your opponent\'s tray.  Unlimited usage.</string>
	<string name="store_item_word_hints_title">Hoot\'s Hints</string>
	<string name="store_item_word_hints_description">Twice per game, tap into Hoot the Owl\'s giant vocabulary to help find a word when you are stuck! Unlimited games.</string>
		<string name="share_subject">Words With Enemies</string>
		<string name="share_message">Check out Words With Enemies for Android in the Google Play store.  Test your crossword skills against some super smart monsters.  Always play at your own pace, as fast as you desire.</string>
	<string name="about_main">Words With Enemies by RiotApps</string>
	<string name="about_version">version: %s</string>
	<string name="about_build_number">build: %s</string>
	<string name="about_support">Need support? Have comments? Want to report a bug?</string>
	<string name="about_support_link">http://wordswithenemies.uservoice.com/</string>
	<string name="about_fb_like">Please like us on Facebook</string>
	<string name="about_fb_link">https://www.facebook.com/pages/Words-With-Enemies/560080617380480</string>
	<string name="main_menu_about">About Words With Enemies</string>
	<string name="full_rules_1">The idea is to score more points than your opponent by forming valid words out of the letters in your tray combined with the letters 
 	    		   on the board.  Letters must be placed on the board in a single axis, either horizontally or vertically.  Letters can played played on top of previously played letters.</string>
   	<string name="full_rules_2">To start the game, the letters of the first word must placed on at least one of the four stars in the middle of the board. (The stars disappear after the first word is played.) 
   	    			   All words must contain 2 or more letters. 
                       The players alternate turns. Each turn after the first (with the exception of skips and swaps) must 
                       place at least one letter next to a previously placed letter on the board, either to the left or right or above or below, OR overlaying 
                       a previously played letter.</string>
 	<string name="full_rules_3">An overlay is a letter that is played on top of a letter that was placed on the 
                       board in any previous turn.  Just remember that a player must overlay a letter with a different letter.  In other words, one 
                       cannot overlay an \"A\" with another \"A\".  The letters must be different.</string>
 	<string name="full_rules_4">A player can skip a turn or swap letters.  
                       Swapped letters are returned to the hopper, the hopper is reshuffled, and the amount of swapped letters are pulled out of the hopper
                       and given to the player.  The player\'s turn is then skipped.  Swapping is not allowed after the hopper is empty.</string>
 	<string name="full_rules_letters_0">The Basics</string>
 	<string name="full_rules_letters_1">The Letters</string>
 	<string name="full_rules_letters_2">105 letters are shuffled and stored in the hopper until they are dispersed into the player\'s trays.  The mix of the first 100 letters is as follows:</string>
 	<string name="full_rules_letters_3">The final 5 letters are made up of 4 randomly chosen consonants and 1 randomly chosen vowel (A, E, I, O, or U).  The random letters will 
                        be unique, meaning that the random consonants chosen might be, for example, "P", "R", "K" and "C", but would never be "P", "K", "R", and "R".</string>
	<string name="full_rules_scoring_1">Scoring</string>
	<string name="full_rules_scoring_2">Each letter has an assigned value as follows:</string>
	<string name="full_rules_scoring_3">Bonuses</string>
	<string name="full_rules_scoring_4">The codes on the board represent bonus values that are multiplied times various letter values that 
                            are placed during a turn.  </string>
    <string name="full_rules_scoring_bonus_2l">the value of the individual letter is multiplied by 2. </string>
    <string name="full_rules_scoring_bonus_3l">the value of the individual letter is multiplied by 3. </string>
    <string name="full_rules_scoring_bonus_4l">the value of the individual letter is multiplied by 4. </string>
    <string name="full_rules_scoring_bonus_2w">the value of the word is multiplied by 2. </string>
    <string name="full_rules_scoring_bonus_3w">the value of the word is multiplied by 3. </string>
    <string name="full_rules_scoring_5">If an overlay is placed on a bonus tile the bonus does not count.  Only the overlay\'s letter value counts.  Other bonus tiles in the same turn 
                                count normally, just not overlays. Just like any other letter, an overlay\'s letter value is calculated as part of the value of the word if 
                                another letter is placed on a 2W or 3W.</string>
    <string name="full_rules_scoring_6">If more than one word is formed during a turn, bonus tiles values are only assigned to the word that contained the bonus tiles.</string>
    <string name="full_rules_scoring_7">Letter multipliers are calculated before word multipliers when the points are calculated for a turn.
                                If a word lands on more than one word multiplier bonus tile, each bonus multiplier is used to determine the final score.</string>
    <string name="full_rules_scoring_smasher_1">Bonus 40</string>
    <string name="full_rules_scoring_smasher_2">Another way to earn points is to use all 7 letters in your tray in a single turn. If you use 7 letters in a single turn,
                            you\'ve played a Bonus 40, which - interestingly enough - is worth 40 bonus points.</string>
    <string name="full_rules_finish_1">Win, Lose, or Draw</string>
</resources>