<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    >
    
    	<com.google.ads.AdView  
          android:id="@+id/adView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           ads:adUnitId="@string/admob_pub_id_about"
           android:layout_centerHorizontal="true" 
           ads:adSize="BANNER"
           ads:testDevices="TEST_EMULATOR"
           ads:loadAdOnCreate="false"/>
<LinearLayout  
    android:layout_above="@id/adView" 
    style="@style/LayoutStyle"
    android:orientation="vertical" >
   
     <include android:id="@+id/topAreaLayout" layout="@layout/toparealayout" />

   <LinearLayout
         style="@style/LayoutFormStyle"
                android:layout_height="fill_parent"
     
         >
	<LinearLayout
		style="@style/FormBackgroundStyle"
					android:layout_marginTop="5dp"
				 android:layout_marginBottom="5dp"
				 android:orientation="vertical"
				 android:layout_width="fill_parent"
				 android:layout_height="wrap_content"
		
	>
		<TextView
		        style="@style/ContentAreaTextTopStyle"
		           android:paddingTop="0dp"
		        android:layout_height="12dp"
		        />
		   <LinearLayout 
            style="@style/ContentAreaTextBottomStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical"
        >
    <ScrollView   
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent" 
    	android:fadingEdge="none"
    	
    	 >
	<RelativeLayout 
	   	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
	 
	    > 


	<TextView
        style="@style/ContentAreaTextStyle"
        android:text="@string/about_main"
     android:id="@+id/about_main"
        />
   
 
   <TextView
        style="@style/ContentAreaTextStyle" 
        android:id="@+id/tvVersion"
       android:layout_below="@id/about_main"
       android:layout_width="wrap_content" 
        />
   
     <TextView
        style="@style/ContentAreaTextStyle" 
        android:id="@+id/tvVersionName"
       android:layout_toRightOf="@id/tvVersion"
            android:layout_width="wrap_content" 
            android:layout_below="@id/about_main"
        />
   
    <TextView
        style="@style/ContentAreaTextStyle"
        android:id="@+id/tvBuildNumber"
         android:layout_below="@id/tvVersion"
    
        />
     <TextView
        style="@style/ContentAreaTextStyle"
        android:text="@string/about_support" 
        android:id="@+id/tvSupportText"
        android:layout_below="@id/tvBuildNumber"
      	android:paddingBottom="0dp"       
       
        />
     <TextView
        style="@style/ContentAreaLinkStyle"
        android:id="@+id/tvSupportLink"
        android:text="@string/about_support_link" 
      	android:layout_below="@id/tvSupportText"
      	android:layout_marginLeft="10dp"
      	android:paddingTop="2dp"
        />
  	
      <TextView
        style="@style/ContentAreaTextStyle"
        android:id="@+id/tvFBLike"
         android:text="@string/about_fb_like" 
     	 android:layout_below="@id/tvSupportLink"
  		android:paddingBottom="0dp"   
        />

      <TextView
        style="@style/ContentAreaLinkStyle"
        android:id="@+id/tvFBPageLink"
      	android:layout_below="@id/tvFBLike"
      	android:paddingTop="2dp"
  		android:text="@string/about_fb_link" 
  		android:layout_marginLeft="10dp"
        />
 
       <TextView
        style="@style/ContentAreaTextStyle"
        android:id="@+id/tvDeviceSpecs"
         android:background="@drawable/text_selector_bottom"
      	android:layout_below="@id/tvFBPageLink"
      	android:paddingTop="2dp"
        />
</RelativeLayout>
 </ScrollView> 
</LinearLayout>
</LinearLayout> 
   </LinearLayout> 

</LinearLayout> 
</RelativeLayout>